Updating Daisy.
News:
- support for transcendentals
- optimization-based roundoff error estimation
- cleanup of code base
- fma support
- mixed-precision support
- interval subdivision